Fixed bug #38808 ("maybe ref" issue for current() and others)